infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # This rewrites the path to match the backend service
spec:
  ingressClassName: nginx # Specify the ingress class to use
  rules:
    - host: ticketing.local.dev
    # # Add host entry to /etc/hosts
    # echo "127.0.0.1 ticketing.dev" | sudo tee -a /etc/hosts
      http:
        paths:
          - path: /api/v1/user/?(.*)
            pathType: ImplementationSpecific # This allows regex paths
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/tickets/?(.*)
            pathType: ImplementationSpecific # This allows regex paths
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific # This allows regex paths
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
